k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tavira-service-staging
  namespace: default
  labels:
    app: tavira-staging
    environment: staging
spec:
  type: ClusterIP
  selector:
    app: tavira-staging
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
